--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header class="header-web">
+    <!-- <header class="header-web">
         <div class="container header__container">
             <a href=" " class="logo">
                 <span class="web">Web</span><span class="header__studio">Studio</span>
@@ -51,9 +51,9 @@
                     </li>
                 </ul>
             </div>
-    </header>
+    </header> -->
     <main>
-        <section class="efect">
+        <!-- <section class="efect">
             <div class="container">
                 <h1 class="efect-title">
                     Эффективные решения <br /> для вашего бизнеса
@@ -64,62 +64,62 @@
             </button>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="our-sence">
-            <div>
+            <div class="container">
                 <ul class="our-sence-list">
                     <li class="our-list__item">
-                        <svg class="our-list__icon" width="70" height="70">
+                        <div class="our-container">
+                            <svg class="our-list__icon" width="70" height="70">
                 <use href="./images/icons.svg#icon-antenna-1"></use>
               </svg>
-                    </li>
-                    <li class="our-list__item">
-                        <svg class="our-list__icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-clock-1"></use>
-              </svg>
-                    </li>
-                    <li class="our-list__item">
-                        <svg class="our-list__icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-diagram-1"></use>
-              </svg>
-                    </li>
-                    <li class="our-list__item">
-                        <svg class="our-list__icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-astronaut-1"></use>
-              </svg>
-                    </li>
-                </ul>
-            </div>
-            <div class="container">
-                <ul class="slogans">
-                    <li class="slogans__item">
+                        </div>
                         <h3 class="slogans__item-text">Внимание к деталям</h3>
                         <p class="slogans-title">
-                            Идейные соображения, а также <br /> начало повседневной работы по формированию позиции.
+                            Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
-                    <li class="slogans__item">
+
+                    <li class="our-list__item">
+                        <div class="our-container ">
+                            <svg class="our-list__icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-clock-1"></use>
+              </svg>
+                        </div>
                         <h3 class="slogans__item-text">Пунктуальность</h3>
                         <p class="slogans-title">
-                            Задача организации, в особенности <br /> же рамки и место обучения кадров влечет за собой.
+                            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
-                    <li class="slogans__item">
+
+                    <li class="our-list__item">
+                        <div class="our-container ">
+                            <svg class="our-list__icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
+              </svg>
+                        </div>
                         <h3 class="slogans__item-text">Планирование</h3>
                         <p class="slogans-title">
-                            Равным образом консультация с <br /> широким активом в значительной степени обуславливает.
+                            Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                     </li>
-                    <li class="slogans__item">
+
+                    <li class="our-list__item">
+                        <div class="our-container ">
+                            <svg class="our-list__icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
+              </svg>
+                        </div>
                         <h3 class="slogans__item-text">Современные технологии</h3>
                         <p class="slogans-title">
-                            Значимость этих проблем настолько <br /> очевидна, что реализация плановых заданий.
+                            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                         </p>
                     </li>
+
                 </ul>
             </div>
         </section>
-        <section class="evocation">
+        <!-- <section class="evocation">
             <div class="container">
                 <h2 class="regular-customers-title">Чем мы занимаемся</h2>
                 <ul class="evocation-images">
@@ -143,8 +143,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="dream-team">
+        </section> -->
+        <!-- <section class="dream-team">
             <div class="container">
                 <h2 class="regular-customers-title">Наша команда</h2>
                 <ul class="dream-team-list">
@@ -298,8 +298,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="regular-customers">
+        </section> -->
+        <!-- <section class="regular-customers">
             <div class="container">
                 <h2 class="regular-customers-title">Постоянные клиенты</h2>
                 <ul class="customers-list list">
@@ -347,10 +347,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
 
-    <footer>
+    <!-- <footer>
         <div class="container container-footer">
             <div class="container-footer__logo">
                 <a href=" " class="logo-footer">
@@ -409,7 +409,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal-window">
             <button type="button" class="modal-close" data-modal-close><svg class="modal-icon">
